--- a/views/home/cart.ejs
+++ b/views/home/cart.ejs
@@ -143,7 +143,7 @@
                         <!-- Cart Calculate Items End -->
 
                         <!-- Cart Checktout Button Start -->
-                        <a href="checkout.html" class="btn btn btn-gray-deep btn-hover-primary m-t-30">Proceed To Checkout</a>
+                        <a href="/checkout" class="btn btn btn-gray-deep btn-hover-primary m-t-30">Proceed To Checkout</a>
                         <!-- Cart Checktout Button End -->
 
                     </div>
