--- a/views/home/header_section.ejs
+++ b/views/home/header_section.ejs
@@ -98,129 +98,16 @@
                             <div id="accountManage">
 
                             </div>
-                            <script>
-                                    var xhttp = new XMLHttpRequest();
-                                    xhttp.responseType = "json";
-                                    xhttp.onload = function (e) {
-                                        if (this.readyState == 4 && this.status == 200) {
-                                            let username =this.response.user;
-                                            console.log(username);
-                                            let content = "";
-                                            if(username != undefined){
-                                                content += '<a href="/myaccount" class="header-action-btn header-action-btn-wishlist">';
-                                                content += '    <i class="icon-user icons"></i>';
-                                                content +=     username 
-                                                content += '</a>';
-                                            } else {
-                                                content += '<a href="/login" class="header-action-btn header-action-btn-wishlist">';
-                                                content += '<i class="icon-user icons"></i>Đăng nhập</a>';
-                                            }
-                                            document.getElementById("accountManage").innerHTML = content;
-                                        }
-                                    };
-                                    xhttp.open("GET", "/api/user");
-                                    xhttp.send();
-                                
-                            </script>
                             <!-- Header My Account Button End -->
 
                             <!-- Header Action Button Start -->
                             <div class="header-action-btn header-action-btn-cart d-none d-sm-flex">
-                                <a class="cart-visible" href="javascript:void(0)">
+                                <a class="cart-visible" href="/cart">
                                     <i class="icon-handbag icons"></i>
-                                    <span class="header-action-num">3</span>
+                                    <span class="header-action-num" id="numberProductInCart"></span>
                                 </a>
-
-                                <!-- Header Cart Content Start -->
-                                <div class="header-cart-content">
-
-                                    <!-- Cart Procut Wrapper Start  -->
-                                    <div class="cart-product-wrapper">
-
-                                        <!-- Cart Product/Price Start -->
-                                        <div class="cart-product-inner p-b-20 m-b-20 border-bottom">
-
-                                            <!-- Single Cart Product Start -->
-                                            <div class="single-cart-product">
-                                                <div class="cart-product-thumb">
-                                                    <a href="single-product.html"><img src="/images/header/header-cart/1.png" alt="Cart Product"></a>
-                                                </div>
-                                                <div class="cart-product-content">
-                                                    <h3 class="title"><a href="single-product.html">Basic Dog Trainning</a></h3>
-                                                    <div class="product-quty-price">
-                                                        <span class="cart-quantity">Qty: <strong> 1 </strong></span>
-                                                        <span class="price">
-                                                        <span class="new">$70.00</span>
-                                                        </span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <!-- Single Cart Product End -->
-
-                                            <!-- Product Remove Start -->
-                                            <div class="cart-product-remove">
-                                                <a href="#/"><i class="icon-close"></i></a>
-                                            </div>
-                                            <!-- Product Remove End -->
-
-                                        </div>
-                                        <!-- Cart Product/Price End -->
-
-                                        <!-- Cart Product/Price Start -->
-                                        <div class="cart-product-inner p-b-20 m-b-20 border-bottom">
-
-                                            <!-- Single Cart Product Start -->
-                                            <div class="single-cart-product">
-                                                <div class="cart-product-thumb">
-                                                    <a href="single-product.html"><img src="/images/header/header-cart/2.png" alt="Cart Product"></a>
-                                                </div>
-                                                <div class="cart-product-content">
-                                                    <h3 class="title"><a href="single-product.html">Wait, You Need This</a></h3>
-                                                    <div class="product-quty-price">
-                                                        <span class="cart-quantity">Qty: <strong> 1 </strong></span>
-                                                        <span class="price">
-                                                        <span class="new">$80.00</span>
-                                                        </span>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <!-- Single Cart Product End -->
-
-                                            <!-- Product Remove Start -->
-                                            <div class="cart-product-remove">
-                                                <a href="#/"><i class="icon-close"></i></a>
-                                            </div>
-                                            <!-- Product Remove End -->
-
-                                        </div>
-                                        <!-- Cart Product/Price End -->
-
-                                    </div>
-                                    <!-- Cart Procut Wrapper -->
-
-                                    <!-- Cart Product Total Start -->
-                                    <div class="cart-product-total p-b-20 m-b-20 border-bottom">
-                                        <span class="value">Total</span>
-                                        <span class="price">200$</span>
-                                    </div>
-                                    <!-- Cart Product Total End -->
-
-                                    <!-- Cart Product Button Start -->
-                                    <div class="cart-product-btn m-t-20">
-                                        <a href="cart.html" class="btn btn-outline-light btn-hover-primary w-100">View cart</a>
-                                        <a href="checkout.html" class="btn btn-outline-light btn-hover-primary w-100 m-t-20">Checkout</a>
-                                    </div>
-                                    <!-- Cart Product Button End -->
-
-                                </div>
                                 <!-- Header Cart Content End -->
 
-                            </div>
-                            <div class="header-action-btn header-action-btn-cart d-flex d-sm-none">
-                                <a href="cart.html">
-                                    <i class="icon-handbag icons"></i>
-                                    <span class="header-action-num">3</span>
-                                </a>
                             </div>
                             <!-- Header Action Button End -->
 
@@ -230,6 +117,38 @@
                             </a>
                             <!-- Mobile Menu Hambarger Action Button End -->
 
+                            <script>
+                                var xhttp = new XMLHttpRequest();
+                                xhttp.responseType = "json";
+                                xhttp.onload = function (e) {
+                                    if (this.readyState == 4 && this.status == 200) {
+                                        let username =this.response.user;
+                                        let content = "";
+                                        if(username != undefined){
+                                            content += '<a href="/myaccount" class="header-action-btn header-action-btn-wishlist">';
+                                            content += '    <i class="icon-user icons"></i>';
+                                            content +=     username 
+                                            content += '</a>';
+                                        } else {
+                                            content += '<a href="/login" class="header-action-btn header-action-btn-wishlist">';
+                                            content += '<i class="icon-user icons"></i>Đăng nhập</a>';
+                                        }
+                                        document.getElementById("accountManage").innerHTML = content;
+                                    }
+                                };
+                                xhttp.open("GET", "/api/user");
+                                xhttp.send();
+                                var xhttp1 = new XMLHttpRequest();
+                                xhttp1.responseType = "json";
+                                xhttp1.onload = function (e) {
+                                    if (this.readyState == 4 && this.status == 200) {
+                                        let cart = JSON.parse(this.response.cart);
+                                        document.getElementById("numberProductInCart").innerHTML = cart.length > 0 ? cart.length.toString() : "";
+                                    }
+                                };
+                                xhttp1.open("GET", "/api/cart");
+                                xhttp1.send();
+                            </script>
                         </div>
                     </div>
                     <!-- Header Action End -->
