--- a/views/manager/navigation.ejs
+++ b/views/manager/navigation.ejs
@@ -31,7 +31,7 @@
         
     </li>
     <li>
-        <a class="has-arrow" href="/manager/food/<%- id -%>">
+        <a class="has-arrow" href="/manager/<%- id -%>/food">
             <div class="parent-icon"><i class='bx bx-gift'></i>
             </div>
             <div class="menu-title">Quản lý món ăn</div>
