--- a/views/manager/food.ejs
+++ b/views/manager/food.ejs
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="/assets/css/semi-dark.css" />
 	<link rel="stylesheet" href="/assets/css/header-colors.css" />
 	<link rel="stylesheet" href="/datatables/css/jquery.dataTables.css">
-	<title>Synadmin – Bootstrap5 Admin Template</title>
+	<title>Manager</title>
 </head><body>
 	<!--wrapper-->
 	<div class="wrapper">
