--- a/views/manager/food.ejs
+++ b/views/manager/food.ejs
@@ -311,6 +311,10 @@
 				<div class="card">
 					<div class="card-body">
 						<h1>Quản lý món ăn</h1>
+						<a href="" class="btn btn-primary mb-2">
+							<i class="fa fa-plus"></i> Thêm mới
+						</a> 
+
 						<div class="table-responsive">
 							<table class="table-allow-pagination table mb-0">
 								<thead class="table-light">
@@ -336,9 +340,11 @@
 											<td><%=elem.price%></td>
 											<td><button type="button" class="btn btn-primary btn-sm radius-30 px-4">View Details</button></td>
 											<td>
-												<div class="d-flex order-actions">
+												<!-- <a href="javascript:;" class="ms-3"><i class='bx bxs-trash'></i></a> -->
+												<div class="d-flex order-actions" style="min-width: 30px;">
+													<a href="" class="btn btn-warning"><i alt="Edit" class="fa fa-pencil"></i>Sửa</a>
+													<a href="" class="btn btn-danger" data-id="" data-toggle="modal" data-target=""><i alt="Delete" class="fa fa-trash"></i>Xóa</a>
 													
-													<a href="javascript:;" class="ms-3"><i class='bx bxs-trash'></i></a>
 												</div>
 											</td>
 										</tr>
