--- a/views/manager/food.ejs
+++ b/views/manager/food.ejs
@@ -12,6 +12,8 @@
 	<!-- loader-->
 	<link href="/assets/css/pace.min.css" rel="stylesheet" />
 	<script src="/assets/js/pace.min.js"></script>
+	<!-- Font Awesome -->
+	<link href="/assets/css/font-awesome.min.css" rel="stylesheet">
 	<!-- Bootstrap CSS -->
 	<link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/assets/css/bootstrap-extended.css" rel="stylesheet">
